dxscale/core/commons/accountTrigger/objects/AccountControlSwitch__c/AccountControlSwitch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to control automations on the account object</description>
    <label>Account Control Switch</label>
</CustomObject>