dxscale/core/commons/accountTrigger/objects/AccountControlSwitch__c/fields/RunValidationRules__c.field-meta.xml
<CustomField>
    <fullName>RunValidationRules__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to control the execution of workflows on the account object</description>
    <inlineHelpText>Checkbox to control the execution of workflows on the account object</inlineHelpText>
    <label>Run Validation Rules</label>
    <type>Checkbox</type>
</CustomField>